--- a/client/src/assets/styles/utils/variables.scss
+++ b/client/src/assets/styles/utils/variables.scss
@@ -13,4 +13,6 @@
   --transparent-white: #ffffff9f;
 
   --scrollbar-width: 17px;
+  --mobile-nav-height: 55px;
+  --desktop-nav-height: 53px;
 }
