--- a/client/src/components/pages/Profiles/Profiles.scss
+++ b/client/src/components/pages/Profiles/Profiles.scss
@@ -8,7 +8,11 @@
   background-size: cover;
   background-attachment: fixed;
   background-repeat: no-repeat;
-  // min-height: 100vh;
+  min-height: calc(100vh - var(--mobile-nav-height));
+
+  @include at-medium {
+    min-height: calc(100vh - var(--desktop-nav-height));
+  }
 
   &::before {
     content: '';
